yamls/AIEngine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiengine
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiengine
  template:
    metadata:
      labels:
        app: aiengine
    spec:
      serviceAccountName: aiengine
      containers:
        - name: aiengine
          image: ghcr.io/yaozengzeng/aiengine:latest
          command:
            - /manager
          args:
            - --leader-elect
            - --health-probe-bind-address=:8081
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: aiengine
  namespace: ollama
spec:
  selector:
    app: aiengine
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
---
