yamls/aiengine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiengine
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiengine
  template:
    metadata:
      labels:
        app: aiengine
    spec:
      containers:
        - name: aiengine
          image: ghcr.io/yaozengzeng/aiengine:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: aiengine-secret
              mountPath: /app/certs
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
      volumes:
        - name: aiengine-secret
          secret:
            secretName: aiengine-secret
            items:
              - key: tls.crt
                path: server.crt
              - key: tls.key
                path: server.key
---
apiVersion: v1
kind: Service
metadata:
  name: aiengine
  namespace: ollama
spec:
  selector:
    app: aiengine
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
